# bnb_gan

./: .gitignore  README.md  clean.py  main.py  pyproject.toml  run.py
configs/: default.yaml  paper.yaml  quick.yaml
docs/: README.md
examples/: basic_usage.py
figures/: gan_history.json
notebooks/: .gitkeep  benchmark_analysis.ipynb
outputs/default/experiments/dataset/: meta.json  result.json
outputs/default/experiments/gan_train/: history_eps_1p0000.json  meta.json  result.json
outputs/default/experiments/waveform_eval/waveforms/: sample_0000.npz  sample_0001.npz  sample_0002.npz  sample_0003.npz
src/: __init__.py  __main__.py
src/config/: __init__.py  loader.py  schema.py
src/data/: __init__.py  experiments.py  generator.py  nn_dataset.py
src/experiments/: __init__.py  base.py  config.py  exp_convergence.py  exp_dataset.py  exp_gan_train.py  exp_rate_sweep.py  exp_waveform_eval.py  report.py  results.py  runner.py  sweep.py
src/gan/: __init__.py  history.py  networks.py  trainer.py  utils.py
src/metrics/: __init__.py  base.py  convergence.py  pulse_comp_metrics.py  radar.py  rate.py  similarity.py
src/optimizer/: __init__.py  bnb.py  node.py  projections.py  waveform_optimizer.py
src/optimizer/solvers/: __init__.py  base.py  lb_cvxpy.py  lb_gp.py  ub_gp.py  ub_slsqp.py
src/plotting/: __init__.py  figures.py  style.py
src/signal_proc/: __init__.py  pulse_compression.py  waveform.py
src/utils/: __init__.py  config.py  math_helpers.py
tests/: test_bnb.py  test_projections.py  test_refactored.py  test_signal_proc.py  test_solvers.py
