[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "radcom-waveform"
version = "0.1.0"
description = "Dual-Functional Radar-Communication Waveform Design via Branch-and-Bound"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Rafael"},
]
dependencies = [
    "numpy>=1.22",
    "scipy>=1.9",
    "cvxpy>=1.3",
    "h5py>=3.7",
    "matplotlib>=3.5",
    "jupyter>=1.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "tqdm>=4.60",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
